force-app/main/default/objects/Commission_Detail__c/Commission_Detail__c.object-meta.xml
<CustomObject>
    <description>When a Deal is Closed Won, the Commission Detail Record is created.  This is the Parent Record of the Commission Record.</description>
    <label>Commission Detail</label>
    <nameField>
        <displayFormat>COMTYPE-{00000}</displayFormat>
        <label>Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>