force-app/main/default/objects/Commission_Detail__c/fields/Account_Intro_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Intro_Source__c</fullName>
    <formula>TEXT( Deal__r.Account.Introductions_Source__c ) &amp; 
IF(ISBLANK(TEXT( Deal__r.Account.Introduction_Subsource__c )),&quot;; &quot;&amp; TEXT( Deal__r.Account.Introduction_Subsource__c ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Intro Source</label>
    <type>Text</type>
</CustomField>