force-app/main/default/objects/Commission_Detail__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>