force-app/main/default/objects/Commission_Detail__c/fields/CAF_YSP__c.field-meta.xml
<CustomField>
    <fullName>CAF_YSP__c</fullName>
    <formula>TEXT(Deal__r.CAF_YSP__c)</formula>
    <label>CAF YSP</label>
    <type>Text</type>
</CustomField>