force-app/main/default/objects/Commission_Detail__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <description>Commission Type from the Deal</description>
    <inlineHelpText>Internal = CoreVest sourced | Direct = RM sourced</inlineHelpText>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commission_Type</valueSetName>
    </valueSet>
</CustomField>