force-app/main/default/objects/Commission_Detail__c/fields/Commission_Type_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Commission Type has been overridden</description>
    <inlineHelpText>Indicates that the Commission Type has been overridden</inlineHelpText>
    <label>Commission Type Overridden</label>
    <type>Checkbox</type>
</CustomField>