force-app/main/default/objects/Commission_Detail__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Deal</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commission Details</relationshipLabel>
    <relationshipName>Commission_Details</relationshipName>
    <type>Lookup</type>
</CustomField>