force-app/main/default/objects/Commission_Detail__c/fields/Deal_Intro_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Intro_Source__c</fullName>
    <formula>TEXT(Deal__r.Deal_Intro_Source__c) + &quot;; &quot; +  TEXT(Deal__r.Deal_Intro_Sub_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Intro Source</label>
    <type>Text</type>
</CustomField>