force-app/main/default/objects/Commission_Detail__c/fields/Final_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Loan_Amount__c</fullName>
    <formula>IF(CONTAINS(Text(Deal__r.Type), &apos;Term&apos;) , Deal__r.Final_Loan_Amount__c,  Deal__r.LOC_Commitment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>