force-app/main/default/objects/Commission_Detail__c/fields/Internal_Referral__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referral</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Details</relationshipName>
    <type>Lookup</type>
</CustomField>