force-app/main/default/objects/Commission_Detail__c/fields/Internal_Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referral_Fee__c</fullName>
    <label>Internal Referral Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>