force-app/main/default/objects/Commission_Detail__c/fields/Internal_Referral_Fee_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referral_Fee_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Referral Fee Bypass</label>
    <type>Checkbox</type>
</CustomField>