force-app/main/default/objects/Commission_Detail__c/fields/Loan_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Commitment__c</fullName>
    <formula>Deal__r.LOC_Commitment__c</formula>
    <inlineHelpText>CRE/Multifamily</inlineHelpText>
    <label>Loan Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>