force-app/main/default/objects/Commission_Detail__c/fields/Loan_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product_Type__c</fullName>
    <formula>TEXT(Deal__r.LOC_Loan_Type__c)</formula>
    <label>Loan Product Type</label>
    <type>Text</type>
</CustomField>