force-app/main/default/objects/Commission_Detail__c/fields/Loan_Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Referral_Account__c</fullName>
    <formula>Deal__r.Referral_Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Referral Account</label>
    <type>Text</type>
</CustomField>