force-app/main/default/objects/Commission_Detail__c/fields/Loan_Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Loan_Referral_Contact__c</fullName>
    <formula>Deal__r.Referral_Source_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Referral Contact</label>
    <type>Text</type>
</CustomField>