force-app/main/default/objects/Commission_Detail__c/fields/LOC_Commitment__c.field-meta.xml
<CustomField>
    <fullName>LOC_Commitment__c</fullName>
    <formula>Deal__r.LOC_Commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOC Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>