force-app/main/default/objects/Commission_Detail__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <label>New Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>