force-app/main/default/objects/Commission_Detail__c/fields/Originator_Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Originator_Paid_in_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Originator Paid in Full</label>
    <type>Checkbox</type>
</CustomField>