force-app/main/default/objects/Commission_Detail__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>text(Deal__r.LOC_Loan_Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>