force-app/main/default/objects/Commission_Detail__c/fields/Repeat_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Borrower__c</fullName>
    <description>Repeat Borrower comes from Deal Parent Account</description>
    <formula>Deal__r.Account.Repeat_Borrower__c</formula>
    <inlineHelpText>From Account</inlineHelpText>
    <label>Repeat Borrower</label>
    <type>Checkbox</type>
</CustomField>