force-app/main/default/objects/Commission_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>