force-app/main/default/objects/Commission_Detail__c/listViews/Pending_Commission_Type_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Commission_Type_Approval</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>Close_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Commission_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Commission Type Approval</label>
</ListView>